[tool.poetry]
name = "scam-scanner"
version = "0.1.0"
description = "Headstarter first Hackathon Project for Track C, detecting phishing sites utilizing AI."
authors = ["peppapig450 <nbgenius1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^3.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.4.2"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
